Adds Japanese translation for People can change

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -22,8 +22,8 @@
     "Be the one to change text": "弱点を見て、自分のことを変更するのはとても難しいです。詳しくない視点に直面すると、不安とか危険までも感じるかもしれません。しかし、他の文化から来る人と接続するのは素晴らしい感じだと思います。そうできるために、他の人が変化するのを待たずに、自分で変化するほうがいいでしょうと思います。\n\n私の一番いい思い出にはグリーンランドに行った時です。ホストしてくれたグリーンランド人のおばあちゃんと一緒に、伝統的な民族衣装を作るようになりました。おばあちゃんも私もお互いの言語が話せませんでした。それでも、接続するために言葉がいりませんでした。\n\n自分と違う人と色々なことを共有て、自分の視点を超えて見ると、きっと豊かな経験になると思います。",
     "Care about the people you work with": "同僚を真本当に気につけて",
     "Care about the people you work with text": "仕事でチームメンバーを気につけてと言っても、実は表面的にしか気につけないと言うのがあります。本当に気につけるのは、チームメンバーが言っていることを理解してみたり、犠牲を払ったり、成功を支援したりするようなことだと思います。私の経験で、そうするとチームと一緒に頑張る能力が上がります。\n\n「ラディカル・キャンダー」と言うコンセプトが大好きです。グーグルとアップルで働いたスコットキムはこのコンセプトを発明しました。スコットさんによると、同僚とのいい関係を作るには二つのことがあります。第一側面は心から相手を気にかけることです。第二側面は言いにくいことをズバリと言うことです。その二つの原則は職場でとても大切だと思います。",
-    "People can change": "People can change",
-    "People can change text": "In the right environment, cultivating a growth mindset, you can be the person you want to be. I do not have a perfect growth mindset, but I’m working on it. As I come to ‘see’ more and more of the influences which have shaped the mindsets and behaviors I have currently, it helps me choose which ones to let go of and which other ones to go after.\n\nUnfamiliar things and change can make a lot of fear pour out, and it takes a lot of energy to work through them. And maybe you - or the people in your life - are not in the right environment or it’s not the right moment to succeed at changing. But there are ways to make it easier - for yourself and for others - to change. And it’s an amazing gift to give yourself and the people around you to forgive your stumbles, try not to judge, and design a strategy to support the change you want."
+    "People can change": "人が変化する動力があります",
+    "People can change text": "適正な環境があって、成長型マインドセットを持っていたら、自分の望む人になることができると思います。成長型マインドセットを持つようになるのは簡単ではなくて、私は個人的にまだ頑張っています。いつも、どのような習性を身に付けたいか捨てたいかを考えています。\n\n詳しくないことや変化は怖くて、この怖さを乗り越えるにはエネルギが必要です。そして、多分変化するために適切な環境適切なタイミングじゃないかもしれません。たといえ、変化を安くする戦略が絶対にあります。"
   },
   "work": {
     "Work button": "メインページ",
