--- a/locales/jp/translation.json
+++ b/locales/jp/translation.json
@@ -13,13 +13,13 @@
   },
   "about": {
     "About me": "私について",
-    "About main text": "はじめまして。私はブリジットと言います。テックのことが大好きです。理由というと、「実的」のような産業だと思うし、それから、開発者の皆さんは助け合う傾向があるし、人々に役に立つ物が作れるからです。\n\n私はオーストラリア人 でも、ニューヨーク市、パリ、オスロにも住んでいったことがあります。その上に、大学の時に日本の東京と大坂で過ごす機会がありました。日本は私の中で、特別な場所を占めています。フランス語がペラペラで、中国語が少し話すことができます。そして、日本語がしゃべれますが、ぜひ日本に帰って練習したいという希望を持っています。\n\n友達は「ブリジットさんはどんな人か」と聞かれると、「文化、言語、人に関することが大好きだ」と答えると思います。もし、人に関することとテックのことを組み合わせるとしたらならば、それはいいんじゃないと私は思います。\n\n多分、いつか私たちは会う機会があります。それまで、こんにちは ・　ボンジュア ・ 你好 を言って、ためらわないでください !\n\nよろしくお願いします。",
+    "About main text": "はじめまして。私はブリジットと申します。テクノロジーが大好きです。理由は、誠実な産業だと思うからです。そして、開発者の皆さんは、助け合う傾向があり、人々の役に立つ物が作れるからです。\n\n私はオーストラリア人です。 でも、ニューヨーク、パリ、オスロにも住んでいたことがあります。大学生の時に、日本の東京と大阪で過ごす機会がありました。日本は私の中で、特別な場所です。私はフランス語を流暢に話すことができて、中国語も少し話すことができます。そして、日本語が話せますが、ぜひ日本にもう一度戻って、練習したいと思っています。\n\n友達に「私はどんな人か」と聞くと、「文化、言語、人に関することが大好きだ」と言うと思います。もし、人に関することと、テクノロジーを組み合わせることができたら、それは素晴らしいと、私は思います。\n\nいつか私たちは会う機会があるかもしれません。でも、いつでも「こんにちは ・ボンジュール ・ 你好」 とメッセージしてください。\n\nよろしくお願いします。",
     "Asterisk": "",
     "My values": "生活と仕事についての反射",
-    "Make it ok to be wrong": "間違っても大丈夫にしましょう",
-    "Make it ok to be wrong text": "間違っても大丈夫だと言う考え方があれば、いつまでも向上することができるようになると思います。最先端と言うことのために努力するからこそ、間違うことは避けられないものです。エラーを隠す方がいいというチーム文化があれば、失敗から学ぶことができません。その結果、自分を制限するようになってしまうと思います。\n\n典型的な仕事で「私は間違った、私は知らない」と言うのは大変難しいです。これは残念だと思います。私は自分の知らないことやエラーを誠実に伝える仕事環境を標榜したいと思います。",
-    "Be the one to change": "変化する責任は自分の",
-    "Be the one to change text": "弱点を見て、自分のことを変更するのはとても難しいです。詳しくない視点に直面すると、不安とか危険までも感じるかもしれません。しかし、他の文化から来る人と接続するのは素晴らしい感じだと思います。そうできるために、他の人が変化するのを待たずに、自分で変化するほうがいいでしょうと思います。\n\n私の一番いい思い出にはグリーンランドに行った時です。ホストしてくれたグリーンランド人のおばあちゃんと一緒に、伝統的な民族衣装を作るようになりました。おばあちゃんも私もお互いの言語が話せませんでした。それでも、接続するために言葉がいりませんでした。\n\n自分と違う人と色々なことを共有て、自分の視点を超えて見ると、きっと豊かな経験になると思います。",
+    "Make it ok to be wrong": "間違えることも大丈夫にしましょう",
+    "Make it ok to be wrong text": "間違えても大丈夫だと言う考え方があれば、いつまでも向上することができると思います。最先端であるために努力するからこそ、間違えることは避けられないものです。エラーを隠す方が良いというチーム文化があると、失敗から学ぶことができません。その結果、自分を制限するようになってしまいます。\n\n普段の仕事の中で「私は間違えました。私は知りません。」と言うことは、大変難しいです。これはとても残念だと思います。私は自分の知らないことや、エラーを誠実に伝える仕事環境を構築したいと思います。",
+    "Be the one to change": "変化する責任は自分のもの",
+    "Be the one to change text": "弱点を見て、自分を変えることは、とても難しいです。理解できないことに直面すると、不安や危険も感じるかもしれません。しかし、異なる文化から来る人とつながることは、素晴らしいと思います。そうできるために、他人が変化するのを待たずに、自分を変えるほうがいいでしょう。\n\n私の一番いい思い出にはグリーンランドに行った時です。ホストしてくれたグリーンランド人のおばあちゃんと一緒に、伝統的な民族衣装を作るようになりました。おばあちゃんも私もお互いの言語が話せませんでした。それでも、接続するために言葉がいりませんでした。\n\n自分と違う人と色々なことを共有て、自分の視点を超えて見ると、きっと豊かな経験になると思います。",
     "Care about the people you work with": "同僚を真本当に気につけて",
     "Care about the people you work with text": "仕事でチームメンバーを気につけてと言っても、実は表面的にしか気につけないと言うのがあります。本当に気につけるのは、チームメンバーが言っていることを理解してみたり、犠牲を払ったり、成功を支援したりするようなことだと思います。私の経験で、そうするとチームと一緒に頑張る能力が上がります。\n\n「ラディカル・キャンダー」と言うコンセプトが大好きです。グーグルとアップルで働いたスコットキムはこのコンセプトを発明しました。スコットさんによると、同僚とのいい関係を作るには二つのことがあります。第一側面は心から相手を気にかけることです。第二側面は言いにくいことをズバリと言うことです。その二つの原則は職場でとても大切だと思います。",
     "People can change": "人が変化する動力があります",
