--- a/locales/jp/translation.json
+++ b/locales/jp/translation.json
@@ -71,7 +71,7 @@
         }
       },
     "footer": {
-      "Don't hesitate to say hello": "Hello ・　ボンジュア ・ 你好 を言って、ためらわないでください ! ",
+      "Don't hesitate to say hello": "いつでも「Hello ・ こんにちは ・ ボンジュール ・ 你好」 とメッセージしてください ! ",
       "I would love to hear from you": "友達になりましょう。"
     }
 }
