Removes 'city' from New York in Japanese translation of city headers

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -3,7 +3,7 @@
   "header": {
     "Full-stack-developer": "フルスタック開発者",
     "Melbourne": "メルボルン",
-    "NYC": "ニューヨーク市",
+    "NYC": "ニューヨーク",
     "Paris": "パリ",
     "Tokyo": "東京",
     "Oslo": "オスロ"
