Adds logic to add class to certain elements if the language is japanese so I can tweak font size and width of small header h3 container; puts parentheses around 'Prouduct Managers in en and jp

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,7 +26,7 @@
     },
     "work": {
       "Work button": "Home",
-      "Product-managed": "Product-managed",
+      "Product-managed": "(Product-managed)",
       "Front end": "Front end",
       "Back end": "Back end",
       "See it live or view the user stories, or code.": "See it live or view the user stories, or code.",
