--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -26,7 +26,7 @@
     },
     "work": {
       "Work button": "Home",
-      "Product-managed": "Product-managed",
+      "Product-managed": "(Product-managed)",
       "Front end": "Front end",
       "Back end": "Back end",
       "See it live or view the user stories, or code.": "See it live or view the user stories, or code.",
