--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -26,7 +26,7 @@
     },
   "work": {
     "Work button": "Page principale",
-    "Product-managed": "Product-managé",
+    "Product-managed": "(Product-managé)",
     "Front end": "Front end",
     "Back end": "Back end",
     "See it live or view the user stories, or code.": "See it live or view the user stories, or code.",
