--- a/locales/jp/translation.json
+++ b/locales/jp/translation.json
@@ -27,7 +27,7 @@
   },
   "work": {
     "Work button": "メインページ",
-        "Product-managed": "プロダクト マネージャー",
+        "Product-managed": "(プロダクト マネージャー)",
         "Front end": "Front end",
         "Back end": "Back end",
         "See it live or view the user stories, or code.": "See it live or view the user stories, or code.",
