--- a/locales/jp/translation.json
+++ b/locales/jp/translation.json
@@ -60,7 +60,7 @@
           "Tech stack front end": "React, Google Sheets API (built by the awesome Jesus Escalona)",
           "Tech stack back end": "N/A",
           "Project main text": "While managing the Food Systems Dialogues (FSDs) on behalf of the World Economic Forum and other sponsors, I product-managed the creation of a seating plan and reporting tool.\n\nThe FSDs promise to bring together people from all different sectors of food production (e.g. farmers, manufacturers, nutritionists) to - literally - the same table to devise strategies for promoting nutrition and sustainability. \n\nWith this tool, generating diverse seating plans went from taking days, to being at the click of a button. It also gives visibility on where representation is low, allowing organizers to seek more balanced participation.",
-          "Project short text": "フードシステムダイアログというイベントのための、適切な座席を配置するアプリです。座席を配置するプロセスは、このアプリを使わずに数日を要していました。そして、アプリを使って、ダイバーシティレポートを作ることもできます。エスカローナヘズスは開発者で、私はプロジェクトマネージャーでした。"
+          "Project short text": "フードシステムダイアログというイベントのための、適切な座席を配置するアプリです。座席を配置するプロセスは、このアプリを使わずに数日を要していました。そして、アプリを使って、ダイバーシティレポートを作ることもできます。開発者はエスカローナヘズスで、私はプロジェクトマネージャーでした。"
         },
         "Personal website": {
           "Title": "私の個人ウェブサイト",
