--- a/locales/jp/translation.json
+++ b/locales/jp/translation.json
@@ -67,7 +67,7 @@
           "Tech stack front end": "React.js, Three.js, drei, i18next",
           "Tech stack back end": "N/A",
           "Project main text": "",
-          "Project short text": "このウェブサイトは心をこめて作りました。3Dメッシュを使って、CSSをゼロから作って、自分でフランス語・日本語・英語の翻訳をしました。サイトを越関すると私を少し知っている印象があるといいと思います。ようこそ！"
+          "Project short text": "このウェブサイトは心をこめて作りました。3Dメッシュを使って、CSSをゼロから作って、自分でフランス語・日本語・英語の翻訳をしました。サイトをご覧いただいて、私のことを、もっと知ってもらえたら嬉しいです。ようこそ！"
         }
       },
     "footer": {
