--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -63,7 +63,7 @@
           "Project short text": "A tool to generate seating plans and report on diversity for Food Systems Dialogues (FSDs) events. The process went from taking days, to being at the click of a button. I oversaw the creation of this tool while managing the FSDs on behalf of the World Economic Forum and other sponsors. Built by Jesus Escalona."
         },
         "Personal website": {
-          "Title": "Personal website",
+          "Title": "Personal portfolio",
           "Tech stack front end": "React.js, Three.js, drei, i18next",
           "Tech stack back end": "N/A",
           "Project main text": "",
