--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -34,11 +34,11 @@
       "View the code": "View the code",
       "Jesus Escalona": "Jesus Escalona",
       "gmxdropbox": {
-        "Title": "Geoff McFetridge x DropBox",
+        "Title": "Geoff McFetridge x Dropbox",
         "Tech stack front end": "ECMAScript 6",
         "Tech stack back end": "N/A",
-        "Project main text": "I created a web experience to support an event for artist Geoff McFetridge, in collaboration with DropBox. The brief was to enable a one-off download of a digital copy of Geoff’s art, accompanied by a time-stamped certificate of authenticity, optimized for desktop and mobile.",
-        "Project short text": "I created a web experience to support an event for artist Geoff McFetridge, in collaboration with DropBox. The brief was to enable a one-off download of a digital copy of Geoff’s art, accompanied by a time-stamped certificate of authenticity, optimized for desktop and mobile."
+        "Project main text": "I created a web experience to support an event for artist Geoff McFetridge, in collaboration with Dropbox. The brief was to enable a one-off download of a digital copy of Geoff’s art, accompanied by a time-stamped certificate of authenticity, optimized for desktop and mobile.",
+        "Project short text": "I created a web experience to support an event for artist Geoff McFetridge, in collaboration with Dropbox. The brief was to enable a one-off download of a digital copy of Geoff’s art, accompanied by a time-stamped certificate of authenticity, optimized for desktop and mobile."
       },
       "RACI": {
         "Title": "RACI Project Management",
