--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -34,11 +34,11 @@
     "View the code": "Voir le code",
     "Jesus Escalona": "Jesus Escalona",
     "gmxdropbox": {
-      "Title": "Geoff McFetridge x DropBox",
+      "Title": "Geoff McFetridge x Dropbox",
       "Tech stack front end": "ECMAScript 6",
       "Tech stack back end": "N/A",
-      "Project main text": "Un site-web pour soutenir un événement proposé par l’artiste Geoff McFetridge, en collaboration avec DropBox. Le brief était de créer une expérience où l’on pouvait télécharger un exemplaire unique d’un oeuvre realisé par Geoff, accompagné d’un certificat d’authenticité horodaté. Également optimisé pour mobile.",
-      "Project short text": "Un site-web pour soutenir un événement proposé par l’artiste Geoff McFetridge, en collaboration avec DropBox. Le brief était de créer une expérience où l’on pouvait télécharger un exemplaire unique d’un oeuvre realisé par Geoff, accompagné d’un certificat d’authenticité horodaté. Également optimisé pour mobile."
+      "Project main text": "Un site-web pour soutenir un événement proposé par l’artiste Geoff McFetridge, en collaboration avec Dropbox. Le brief était de créer une expérience où l’on pouvait télécharger un exemplaire unique d’un oeuvre realisé par Geoff, accompagné d’un certificat d’authenticité horodaté. Également optimisé pour mobile.",
+      "Project short text": "Un site-web pour soutenir un événement proposé par l’artiste Geoff McFetridge, en collaboration avec Dropbox. Le brief était de créer une expérience où l’on pouvait télécharger un exemplaire unique d’un oeuvre realisé par Geoff, accompagné d’un certificat d’authenticité horodaté. Également optimisé pour mobile."
     },
     "RACI": {
       "Title": "Outil de project management",
