--- a/locales/jp/translation.json
+++ b/locales/jp/translation.json
@@ -34,7 +34,13 @@
         "View site": "サイトを見る",
         "View the code": "コードを見る",
         "Jesus Escalona": "エスカローナヘズス",
-        "RACI": {
+        "gmxdropbox": {
+          "Title": "Geoff McFetridge x Dropbox",
+          "Tech stack front end": "ECMAScript 6",
+          "Tech stack back end": "N/A",
+          "Project main text": "ジェフマクフェットリジュというアーティストとDropboxのために、このウェブサイトを作りました。サイトで、ジェフさんが描かれた作品とユーザに個別化された証明書をダウンロードすることができます。モバイル最適化バージョンもあります。",
+          "Project short text": "ジェフマクフェットリジュというアーティストとDropboxのために、このウェブサイトを作りました。サイトで、ジェフさんが描かれた作品とユーザに個別化された証明書をダウンロードすることができます。モバイル最適化バージョンもあります。"
+        },"RACI": {
           "Title": "プロジェクト管理のアプリ",
           "Tech stack front end": "React, Semantic UI React, JWT",
           "Tech stack back end": "Rails, BCrypt",
