adds Japanese title for gmxdropbox

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -35,7 +35,7 @@
         "View the code": "コードを見る",
         "Jesus Escalona": "エスカローナヘズス",
         "gmxdropbox": {
-          "Title": "Geoff McFetridge x Dropbox",
+          "Title": "ジェフマクフェットリジュ x Dropbox",
           "Tech stack front end": "ECMAScript 6",
           "Tech stack back end": "N/A",
           "Project main text": "ジェフマクフェットリジュというアーティストとDropboxのために、このウェブサイトを作りました。サイトで、ジェフさんが描かれた作品とユーザに個別化された証明書をダウンロードすることができます。モバイル最適化バージョンもあります。",
