fixes typo in French translations

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -80,7 +80,7 @@
       "Tech stack front end": "React.js, Three.js, drei, i18next",
       "Tech stack back end": "N/A",
       "Project main text": "",
-      "Project short text": "Ce site a été un travail d’ ♡. Il comprend des éléments 3D, du CSS écrit à partir de zéro, des traductions réalisés moi-même et mises en œuvre à l’aide de i18next. J’espère que tu auras le sentiment de me connaître un peu mieux en parcourant le site. En tout cas, tu es le bienvenue. N’hésite pas à me faire parvenir tes feedbacks!"
+      "Project short text": "Ce site a été un travail d’ ♡. Il comprend des éléments 3D, du CSS bâti à partir de zéro, des traductions réalisées moi-même et mises en œuvre à l’aide de i18next. J’espère que tu auras le sentiment de me connaître un peu mieux en parcourant le site. En tout cas, tu es le bienvenue. N’hésite pas à me faire parvenir tes feedbacks!"
     }
   },
   "footer": {
