--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -7,6 +7,19 @@
     "Tokyo": "Tokyo",
     "Oslo": "Oslo"
   },
+  "custom-message": {
+    "Hi": "Bonjour",
+    "there": "",
+    "Welcome to my site": "Bienvenue sur mon site.",
+    "It's lovely to have you here": "Je suis heureuse que tu sois là.",
+    "You can browse my projects below": "Tu peux parcourir mes projets ci-dessous.",
+    "And see my process to build them, including user stories and ERDs": "Et tu verras les approches \n de planification que j'ai employées \n (user stories, ERDs, etc).",
+    "I taught myself React-Three-Fiber (Three.js) to make this site": "J'ai appris React-Three-Fiber (Three.js) dans l'objectif de créer ce site.",
+    "I'd love to chat more about how I built it": "Je serais ravie d'en discuter \n plus avec toi",
+    "Just let me know": "Fais-moi signe :)",
+    "Most of all, I hope you enjoy having a look around": "Avant tout, \n J'espère que tu passeras un bon moment ici.",
+    "Bridget x": "Bien à toi, Bridget x"
+  },
   "main": {
     "About": "À propos"
   },
@@ -80,7 +93,7 @@
       "Tech stack front end": "React.js, Three.js, drei, i18next",
       "Tech stack back end": "N/A",
       "Project main text": "",
-      "Project short text": "Ce site a été un travail d’ ♡. Il comprend des éléments 3D, du CSS écrit à partir de zéro, des traductions réalisés moi-même et mises en œuvre à l’aide de i18next. J’espère que tu auras le sentiment de me connaître un peu mieux en parcourant le site. En tout cas, tu es le bienvenue. N’hésite pas à me faire parvenir tes feedbacks!"
+      "Project short text": "Ce site a été un travail d’ ♡. Il comprend des éléments 3D, du CSS bâti à partir de zéro, des traductions réalisées moi-même et mises en œuvre à l’aide de i18next. J’espère que tu auras le sentiment de me connaître un peu mieux en parcourant le site. En tout cas, tu es le bienvenue. N’hésite pas à me faire parvenir tes feedbacks!"
     }
   },
   "footer": {
